--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="settings">Settings</string>
     <string name="invite_share">Share with Classmates</string>
     <string name="logout">Logout</string>
+
+    <string name="share_url">https://darasastudent.page.link/get</string>
 </resources>
