--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="logout">Logout</string>
 
     <string name="share_url">https://darasastudent.page.link/get</string>
+    <string name="select_date">Select date</string>
+    <string name="no_class_text">You\'ve no classes today. Take \na second to recharge</string>
 </resources>
