added few methods on constants

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="share_url">https://darasastudent.page.link/get</string>
     <string name="select_date">Select date</string>
     <string name="no_class_text">You\'ve no classes today. Take \na second to recharge</string>
+
+    <string name="dev_email">developer.getabujob@gmai.com</string>
+    <string name="dev_subject">Support Darasa Lecturer App</string>
+    <string name="save_class">Save Class</string>
 </resources>
