--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="save_class">Save Class</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="sign_in">Sign in</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="or">or</string>
+    <string name="student_login">Student Login</string>
 </resources>
