cleaned designed the sign up :)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="email">Email</string>
     <string name="or">or</string>
     <string name="student_login">Student Login</string>
+    <string name="student_signup">Student Registration</string>
+    <string name="register">Register</string>
 </resources>
