--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,7 @@
     <string name="manage_your_account">Manage your Account</string>
     <string name="sign_out">Sign out</string>
     <string name="manage_your_classes">Manage your classes</string>
+    <string name="semester_i_e_1">Semester i.e 1</string>
+    <string name="academy_year">Academic Year</string>
+    <string name="save">Save</string>
 </resources>
