added faq to manifest #bug20 fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="no_class_text">You\'ve no classes today. Take \na second to recharge</string>
 
     <string name="dev_email">developer.getabujob@gmai.com</string>
-    <string name="dev_subject">Support Darasa Lecturer App</string>
+    <string name="dev_subject">Support Darasa Student App</string>
     <string name="save_class">Save Class</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="sign_in">Sign in</string>
