designed the single class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="sign_out">Sign out</string>
     <string name="manage_your_classes">Manage your classes</string>
     <string name="semester_i_e_1">Semester i.e 1</string>
-    <string name="academy_year">Academic Year</string>
+    <string name="academy_year">Academic Year i.e 2018/19</string>
     <string name="save">Save</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
