got location services working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,13 @@
     <string name="school">School</string>
     <string name="department">Department</string>
     <string name="chooseEmailClient">Check Email</string>
+
+    <string name="service_not_available">Service not available</string>
+    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
+    <string name="no_address_found">No address found</string>
+    <string name="address_found">Address found</string>
+    <string name="permission_rationale_location">Darasa would like to know your location</string>
+    <string name="permission_location_denied_explanation">You have not granted location permission to Darasa</string>
+    <string name="location">Location</string>
+
 </resources>
