--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="permission_location_denied_explanation">You have not granted location permission to Darasa</string>
     <string name="location">Location</string>
 
+    <string name="error_missing_permissions">Cannot start without required permissions</string>
+
 </resources>
