--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,8 +39,8 @@
     <string name="manage_your_account">Manage your Account</string>
     <string name="sign_out">Sign out</string>
     <string name="manage_your_classes">Manage your classes</string>
-    <string name="semester_i_e_1">Semester i.e 1</string>
-    <string name="academy_year">Academic Year i.e 2018/19</string>
+    <string name="semester_i_e_1">Semester e.g 1</string>
+    <string name="academy_year">Academic Year e.g 2018/19</string>
     <string name="save">Save</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
