--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,8 @@
 
     <string name="error_missing_permissions">Cannot start without required permissions</string>
 
+    <string name="title_activity_splash_screen">Darasa Student</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+
 </resources>
