--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,9 +58,13 @@
     <string name="location">Location</string>
 
     <string name="error_missing_permissions">Cannot start without required permissions</string>
+    <string name="your_offline">You\'re offline</string>
+    <string name="retry">Retry</string>
+    <string name="add">Add</string>
 
-    <string name="title_activity_splash_screen">Darasa Student</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="add_ur_course">Add your Course</string>
+    <string name="add_ur_sem">Add current Semester</string>
+    <string name="add_ur_yr">Add study Year</string>
+
 
 </resources>
