AdvertClassActivity logic implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,16 @@
     <string name="add_ur_info">Add Student Profile</string>
     <string name="study_year">Study year e.g 1</string>
 
+    <string name="start_scan">Start\nScan</string>
+    <string name="scan_class">scanning\nClass</string>
+    <string name="start_scanning_for_lec_txt">Tap Start Scan to\nStart scanning for lecturer inside the classroom</string>
+    <string name="network_scanning_for_lec">Detecting active internet</string>
+    <string name="netlost_scanning_for_lec_txt">Tap Retry to\nscan for lecturer inside the classroom</string>
+    <string name="scanning_for_lec_txt">Scanning for lecturer inside the classroom</string>
+    <string name="checking_for_lec_txt">Detecting lecturer inside the classroom</string>
 
+    <string name="net_needed">Internet required inorder to broadcast lesson in the classroom</string>
+    <string name="unit_code">Unit code</string>
+    <string name="unit_name">Unit name</string>
+    <string name="youre_offline">You\'re offline</string>
 </resources>
