developer.getabujob@gmail.com bug fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="select_date">Select date</string>
     <string name="no_class_text">You\'ve no classes today. Take \na second to recharge</string>
 
-    <string name="dev_email">developer.getabujob@gmai.com</string>
+    <string name="dev_email">developer.getabujob@gmail.com</string>
     <string name="dev_subject">Support Darasa Student App</string>
     <string name="save_class">Save Class</string>
     <string name="forgot_password">Forgot password?</string>
